tests/baselines/reference/instanceSubtypeCheck2.errors.txt
tests/cases/compiler/instanceSubtypeCheck2.ts(6,5): error TS2416: Class member of type 'string' is not assignable to base class member of type 'C2<T>'.


==== tests/cases/compiler/instanceSubtypeCheck2.ts (1 errors) ====
    class C1<T> {
        x: C2<T>;
    }
    
    class C2<T> extends C1<T> {
        x: string
        ~
!!! error TS2416: Class member of type 'string' is not assignable to base class member of type 'C2<T>'.
    }